# DNS-server

./: CMakeLists.txt  CMakePresets.json
inc/: DNSMessage.h
src/: DNSBuffer.cpp  DNSReadBuffer.cpp  DNSResource.cpp  DNSWriteBuffer.cpp  deserialize.cpp  main.cpp  serialize.cpp
test/: main.cpp  test_deserialization.cpp  test_deserialization.h  test_serialization.cpp  test_serialization.h  x.txt
